--- a/passivetotal_service/README
+++ b/passivetotal_service/README
@@ -1,5 +1,6 @@
 Check the PassiveTotal database to see if it contains this domain or IP
 	
-This service relys on a user's allowed searches within the PassiveTotal system of which are earned through accurate domain/IP classifications
+This service relys on a user's allowed searches within the PassiveTotal system
+of which are earned through accurate domain/IP classifications
 	
 Requires an API key available from passivetotal.org
