Enhanced VT service to support selected items available with a private key.
- Will pull private API information for samples.
- Provides an option to download pcap file.
    - Will add pcap to Crits and form a relationship.
    - Relationship dated from when VT analysis was performed.
- The service will add domains to crits if detected in samples.
- Cleaned up the Run() fuction:
    - Logical blocks now live in their own fuction.
    - Added a lot of code comments.
    - Not fully finished with this...but it is a start.
- Added error checks and output.
- Unified output for domains and IPs

--- a/virustotal_service/README
+++ b/virustotal_service/README
@@ -1,4 +1,5 @@
-Check the VirusTotal database to see if it contains this sample, domain or IP.
+This service checks the VirusTotal database to see if it contains this sample, domain or IP. It will then collect relevant data using either a public or 
+private key.
 
 This does not submit the file to VirusTotal, but only performs a lookup of the
 sample's MD5.
