--- a/chminfo_service/README
+++ b/chminfo_service/README
@@ -1,3 +1,3 @@
-CHMInfo will parse a ITSF/Microsoft Compiled HTML help file and generate
-rich metadata about the document and provide basic malware detection
-capabilities.
+CHMInfo will parse an ITSF/Microsoft Compiled HTML help file and
+generate rich metadata about the document and provide basic
+malware detection capabilities.
