--- a/threatgrid_service/README
+++ b/threatgrid_service/README
@@ -1,2 +1,6 @@
 Query ThreatGRID for analysis results or submit samples
 for analysis.
+
+TODO:
+- Currently the plugin looks for completed results for a MD5,
+    it should also look at queued items.
