Testing child files and improvements to object identification. - Testing code included for submitting child objects of interest - Improvements to identifying object content type.

--- a/pdfinfo_service/README
+++ b/pdfinfo_service/README
@@ -15,3 +15,7 @@ How to upgrade PDF tools:
             - self.infile = open(file, 'rb')
             + import StringIO
             + self.infile = StringIO.StringIO(file)
+
+TODO:
+- Handle encrypted PDF objects
+    - Example sample: 1e46c60e65ae9f9c9c8850372d8da491
