--- a/threatgrid_service/README
+++ b/threatgrid_service/README
@@ -1,5 +1,3 @@
-Query ThreatGRID for analysis results or submit samples
-for analysis.
-
-TODO:
-- Ability to add indicators like Data Miner service.
+A service to support the submission of files to ThreatGRID. The
+service will return and display a subset of ThreatGRID results
+and allow network indicators to be easily added to the sample.
