--- a/snugglefish_service/README
+++ b/snugglefish_service/README
@@ -53,7 +53,7 @@ exists before running this command.
 
 Once the files are retrieved you can then use snugglefish to index them:
 
-find /home/wxs/FOO -type f | snugglefish -i -o /home/wxs/snugglefish-indexes/FOO -m 100000
+find /home/wxs/FOO -type f | snugglefish -i -o /home/wxs/snugglefish-indexes/FOO
 
 This will index all the files and store the indexes in
 /home/wxs/snugglefish-indexes/ with the index name of FOO. It is important that
