Update to preview_service. Adds Word doc preview using Antiword (you'll need to install Antiword!)

--- a/preview_service/CHANGELOG
+++ b/preview_service/CHANGELOG
@@ -11,3 +11,7 @@ Version 0.0.3
 -------------
 Added Pillow for image conversion and screenshots
 
+Version 0.0.4
+-------------
+Added Antiword for previewing Word documents
+
