Added an ability to perform some bitwise operations and base64 decode on the carved piece

--- a/carver_service/README
+++ b/carver_service/README
@@ -1,2 +1,3 @@
 The carver service allows you to provide a start and end offset for a Sample and
-carve the contents as a new related Sample.
+carve the contents as a new related Sample, an added bonus is an ability to 
+perform some bitwise operations.
