--- a/cuckoo_distributed_service/README
+++ b/cuckoo_distributed_service/README
@@ -1,5 +1,5 @@
 This is a service intended to perform sample analyses using Cuckoo
-in a distributed manor.
+in a distributed manner.
 
 This is not a standalone service! You'll find everything you need
 to use and setup this service here:
